--- a/base/html/map_crossroad_view3.html
+++ b/base/html/map_crossroad_view3.html
@@ -38,9 +38,10 @@
           <section class="split-screen-container type2">
             <div class="split-screen">
               <span class="split-screen-info">
+                <i>채널1</i>
                 <em>천안동남카메라1</em>
               </span>
-              <video autoplay loop muted width="100%" height="100%" class="split-video">
+              <video autoplay loop muted width="100%" height="100%" poster="/base/images/cannot_connection.png" class="split-video">
                 <source src="https://interactive-examples.mdn.mozilla.net/media/cc0-videos/flower.mp4" type="video/mp4" />
               </video>
             </div>
@@ -51,9 +52,10 @@
             <!-- //split-screen -->
             <div class="split-screen">
               <span class="split-screen-info">
+                <i>채널3</i>
                 <em>천안동남카메라3</em>
               </span>
-              <video autoplay loop muted width="100%" height="100%" class="split-video">
+              <video autoplay loop muted width="100%" height="100%" poster="/base/images/cannot_connection.png" class="split-video">
                 <source src="https://interactive-examples.mdn.mozilla.net/media/cc0-videos/flower.mp4" type="video/mp4" />
               </video>
             </div>
@@ -64,9 +66,10 @@
             <!-- //split-screen -->
             <div class="split-screen">
               <span class="split-screen-info">
+                <i>채널5</i>
                 <em>천안동남카메라5</em>
               </span>
-              <video autoplay loop muted width="100%" height="100%" class="split-video">
+              <video autoplay loop muted width="100%" height="100%" poster="/base/images/cannot_connection.png" class="split-video">
                 <source src="https://interactive-examples.mdn.mozilla.net/media/cc0-videos/flower.mp4" type="video/mp4" />
               </video>
             </div>
@@ -77,9 +80,10 @@
             <!-- //split-screen -->
             <div class="split-screen">
               <span class="split-screen-info">
+                <i>채널7</i>
                 <em>천안동남카메라7</em>
               </span>
-              <video autoplay loop muted width="100%" height="100%" class="split-video">
+              <video autoplay loop muted width="100%" height="100%" poster="/base/images/cannot_connection.png" class="split-video">
                 <source src="https://interactive-examples.mdn.mozilla.net/media/cc0-videos/flower.mp4" type="video/mp4" />
               </video>
             </div>
@@ -89,7 +93,13 @@
             </div>
             <!-- //split-screen -->
             <div class="split-screen">
-              <i class="init-video"><span class="screen-out">기본화면</span></i>
+              <span class="split-screen-info">
+                <i>채널9</i>
+                <em>천안동남카메라9</em>
+              </span>
+              <video autoplay loop muted width="100%" height="100%" poster="/base/images/cannot_connection.png" class="split-video">
+                <source src="https://interactive-examples.mdn.mozilla.net/media/cc0-videos/flower.mp4" type="video/mp4" />
+              </video>
             </div>
             <!-- //split-screen -->
           </section>
