--- a/base/html/signal_info_list.html
+++ b/base/html/signal_info_list.html
@@ -73,10 +73,13 @@
             <!-- //button-function-group -->
 
             <div class="data-tbl-very">
-              <table class="ui very basic table">
+              <table class="ui very basic table is-fncbtn">
                 <colgroup>
                   <col style="width: 72px" />
                   <col style="width: 56px" />
+                  <col />
+                  <col />
+                  <col />
                   <col />
                   <col />
                   <col />
@@ -100,6 +103,9 @@
                     <th>지점 주소</th>
                     <th>교차로 번호</th>
                     <th>신호 종류</th>
+                    <th>도로 개수</th>
+                    <th>신호등 개수</th>
+                    <th>신호등 등록</th>
                     <th>수정일시</th>
                   </tr>
                 </thead>
@@ -119,6 +125,11 @@
                     <td>서울 노원구 동일로 지하 992-1</td>
                     <td>50</td>
                     <td>현시 번호</td>
+                    <td>4</td>
+                    <td>4</td>
+                    <td>
+                      <button class="ui secondary basic button rounded sm">Map 설정</button>
+                    </td>
                     <td>2021-06-07 12:31:33</td>
                   </tr>
                   <tr>
@@ -135,6 +146,11 @@
                     <td>서울 노원구 동일로 지하 992-1</td>
                     <td>50</td>
                     <td>현시 번호</td>
+                    <td>4</td>
+                    <td>4</td>
+                    <td>
+                      <button class="ui secondary basic button rounded sm">Map 설정</button>
+                    </td>
                     <td>2021-06-07 12:31:33</td>
                   </tr>
                 </tbody>
