--- a/base/html/index.html
+++ b/base/html/index.html
@@ -402,7 +402,11 @@
                           <!-- <td class="col-date"></td> -->
                           <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
-                          <td class="col-memo"></td>
+                          <td class="col-memo">
+                            <ul style="font-weight: bold">
+                              <li>- 분할 영상 더블 클릭시 영상 확대 팝업 표시</li>
+                            </ul>
+                          </td>
                         </tr>
                         <tr>
                           <td class="col-num"><!--자동입력--></td>
