--- a/base/html/map_crossroad_view2.html
+++ b/base/html/map_crossroad_view2.html
@@ -38,32 +38,61 @@
           <section class="split-screen-container">
             <div class="split-screen">
               <span class="split-screen-info">
-                <em>천안동남카메라4</em>
+                <i>채널1</i>
+                <em>천안동남카메라1</em>
               </span>
-              <video autoplay loop muted width="100%" height="100%" class="split-video">
+              <video autoplay loop muted width="100%" height="100%" poster="/base/images/cannot_connection.png" class="split-video">
                 <source src="https://interactive-examples.mdn.mozilla.net/media/cc0-videos/flower.mp4" type="video/mp4" />
               </video>
             </div>
             <!-- //split-screen -->
             <div class="split-screen">
               <span class="split-screen-info">
-                <em>천안동남카메라5</em>
+                <i>채널2</i>
+                <em>천안동남카메라2</em>
               </span>
-              <video autoplay loop muted width="100%" height="100%" class="split-video">
+              <video autoplay loop muted width="100%" height="100%" poster="/base/images/cannot_connection.png" class="split-video">
                 <source src="https://interactive-examples.mdn.mozilla.net/media/cc0-videos/flower.mp4" type="video/mp4" />
               </video>
             </div>
             <!-- //split-screen -->
             <div class="split-screen">
-              <i class="init-video"><span class="screen-out">기본화면</span></i>
+              <span class="split-screen-info">
+                <i>채널3</i>
+                <em>천안동남카메라3</em>
+              </span>
+              <video autoplay loop muted width="100%" height="100%" poster="/base/images/cannot_connection.png" class="split-video">
+                <source src="https://interactive-examples.mdn.mozilla.net/media/cc0-videos/flower.mp4" type="video/mp4" />
+              </video>
             </div>
             <!-- //split-screen -->
             <div class="split-screen">
-              <i class="init-video"><span class="screen-out">기본화면</span></i>
+              <i class="no-video"><span class="screen-out">영상 없음</span></i>
             </div>
             <!-- //split-screen -->
           </section>
           <!-- //split-screen-container -->
+
+          <!-- 230925 추가 : 영상 확대 팝업 -->
+          <div class="custom-modal-wrap">
+            <div class="modal expend">
+              <div class="modal-container">
+                <div class="modal-header">
+                  <span class="tit">영상 제목</span>
+                </div>
+                <!-- //modal-header -->
+                <div class="modal-body">
+                  <video autoplay loop muted width="100%" height="100%" class="expend-video">
+                    <source src="https://interactive-examples.mdn.mozilla.net/media/cc0-videos/flower.mp4" type="video/mp4" />
+                  </video>
+                </div>
+                <!-- //modal-body -->
+              </div>
+              <!-- //modal-container -->
+            </div>
+            <!-- //modal -->
+          </div>
+          <!-- //custom-modal-wrap -->
         </div>
         <!-- //ly-map -->
       </main>
@@ -83,7 +112,20 @@
       $('.crossroad-view-container .menu .item').tab();
 
       // 230921 추가 : 상세화면 데이터 영역 x축으로 늘리는 기능 비활성화
+      $('.crossroad-view-container').resizable({
+        handles: 'e',
+        minWidth: 422,
+        maxWidth: 572,
+      });
       $('.crossroad-view-container').resizable('destroy');
+
+      // 230925 추가 : 영상 확대 팝업 클릭 이벤트
+      $(document).on('dblclick', '.split-video', function () {
+        $('.custom-modal-wrap').addClass('active');
+      });
+      $(document).on('dblclick', '.expend-video', function () {
+        $('.custom-modal-wrap').removeClass('active');
+      });
     </script>
   </body>
 </html>
