--- a/base/html/map_main.html
+++ b/base/html/map_main.html
@@ -260,6 +260,7 @@
               })
               .fadeIn(200);
           }
+          $this.addClass('active'); // 230927: 교차로 아이콘 클릭시 교차로 아이콘 변경
         });
       }
       noDimedPopup();
