--- a/base/html/set_point_map.html
+++ b/base/html/set_point_map.html
@@ -71,8 +71,15 @@
           <div class="system-nav">
             <!-- 230918 손모양 버튼 삭제 -->
             <!-- <button type="button" class="ico-hand"><span class="screen-out">손모양 아이콘</span></button> -->
-            <button type="button" class="ico-set-branch"><span class="screen-out">지점 아이콘</span></button>
-            <button type="button" class="ico-set-cw"><span class="screen-out">횡단보도 아이콘</span></button>
+            <!-- 230927 ico-set-item div 추가 및 수정 -->
+            <div class="ico-set-item cr">
+              <button type="button" class="ico-set-cr"><span class="screen-out">교차로 아이콘</span></button>
+              <em>교차로</em>
+            </div>
+            <div class="ico-set-item cw">
+              <button type="button" class="ico-set-cw"><span class="screen-out">횡단보도 아이콘</span></button>
+              <em>횡단보도</em>
+            </div>
           </div>
 
           <i class="speech-bubble-guide"><span class="screen-out">신규지점을 추가하고 싶은 곳에 마커를 놓아주세요</span></i>
@@ -153,14 +160,15 @@
         }
 
         // 우축 중간 시스템 네비게이션 클릭 이벤트
-        $('.system-nav [class*="ico"]').on('click', function () {
+        // 230927 클릭이벤트 수정
+        $('.system-nav .ico-set-item').on('click', function () {
           var $this = $(this);
           $this.toggleClass('active');
-          $('.system-nav button').not(this).removeClass('active');
+          $('.system-nav .ico-set-item').not(this).removeClass('active');
 
           // systemNavState($this, '.ico-hand.active', 'ico-hand-active'); 230918 삭제
-          systemNavState($this, '.ico-set-branch.active', 'ico-set-branch-active');
-          systemNavState($this, '.ico-set-cw.active', 'ico-set-cw-active');
+          systemNavState($this, '.cr.active', 'ico-set-cr-active');
+          systemNavState($this, '.cw.active', 'ico-set-cw-active');
           // 지점 추가 메뉴 팝업 숨김
           $('.js-add-branch').fadeOut(200);
         });
