--- a/base/html/check_equipment_list.html
+++ b/base/html/check_equipment_list.html
@@ -20,7 +20,7 @@
 
       <main class="ly-container">
         <div class="ly-sub">
-          <div class="ly-setting">
+          <div class="ly-setting type2">
             <div class="ui breadcrumb">
               <i class="home icon"></i>
               <i class="right angle icon divider"></i>
