--- a/base/html/crossroads_stats_main.html
+++ b/base/html/crossroads_stats_main.html
@@ -94,7 +94,7 @@
                   <ul class="summary-info-item-wrap">
                     <li>
                       <em class="tit">총 교통량</em>
-                      <p class="clearly"><em>10,555</em> 대</p>
+                      <p class="clearly"><em>3,300,555</em> 대</p>
                     </li>
                     <li>
                       <em class="tit">평균 속도</em>
@@ -112,7 +112,7 @@
                           <tbody>
                             <tr>
                               <th><span>도로명도로명도로명도</span></th>
-                              <td><span>(북동)</span><em>20,555</em> 대</td>
+                              <td><span>(북동)</span><em>220,555</em> 대</td>
                             </tr>
                             <tr>
                               <th><span>가산디지털1로</span></th>
@@ -124,7 +124,7 @@
                             </tr>
                             <tr>
                               <th><span>도로명도로명</span></th>
-                              <td><span>(북)</span><em>20,555</em> 대</td>
+                              <td><span>(북)</span><em>220,555</em> 대</td>
                             </tr>
                           </tbody>
                         </table>
@@ -134,9 +134,10 @@
                       <em class="tit">차종 별 교통량</em>
                       <div class="tbl-bind">
                         <table>
+                          <!-- 230928: col width값 수정 -->
                           <colgroup>
-                            <col style="width: 50%" />
-                            <col style="width: 50%" />
+                            <col style="width: 45%" />
+                            <col style="width: 55%" />
                           </colgroup>
                           <tbody>
                             <tr>
@@ -149,7 +150,7 @@
                             </tr>
                             <tr>
                               <th>버스</th>
-                              <td><em>9,986</em> 대</td>
+                              <td><em>999,986</em> 대</td>
                             </tr>
                             <tr>
                               <th>트레일러</th>
@@ -194,7 +195,7 @@
                     </li>
                     <li>
                       <em class="tit">돌발 발생 건 수</em>
-                      <p class="clearly"><em>50</em> 건</p>
+                      <p class="clearly"><em>53,890</em> 건</p>
                     </li>
                     <li>
                       <em class="tit">종류 별 돌발 발생 건 수</em>
@@ -207,15 +208,15 @@
                           <tbody>
                             <tr>
                               <th>역주행</th>
-                              <td><em>10</em> 건</td>
+                              <td><em>34,860</em> 건</td>
                             </tr>
                             <tr>
                               <th>정지</th>
-                              <td><em>5</em> 건</td>
+                              <td><em>50,843</em> 건</td>
                             </tr>
                             <tr>
                               <th>보행자</th>
-                              <td><em>2</em> 건</td>
+                              <td><em>26,549</em> 건</td>
                             </tr>
                           </tbody>
                         </table>
