--- a/base/html/index.html
+++ b/base/html/index.html
@@ -1131,7 +1131,7 @@
                           <td class="col-1depth"></td>
                           <td class="col-2depth"></td>
                           <td class="col-3depth">카메라 관리</td>
-                          <td class="col-4depth">카메라 목록</td>
+                          <td class="col-4depth">목록</td>
                           <td class="col-5depth"></td>
                           <td class="col-type" data-type=""></td>
                           <td class="col-url">html/camera_list.html</td>
@@ -1145,7 +1145,7 @@
                           <td class="col-1depth"></td>
                           <td class="col-2depth"></td>
                           <td class="col-3depth"></td>
-                          <td class="col-4depth">카메라 상세</td>
+                          <td class="col-4depth">상세</td>
                           <td class="col-5depth"></td>
                           <td class="col-type" data-type="모달팝업"></td>
                           <td class="col-url">html/camera_view.html</td>
@@ -1159,7 +1159,7 @@
                           <td class="col-1depth"></td>
                           <td class="col-2depth"></td>
                           <td class="col-3depth"></td>
-                          <td class="col-4depth">카메라 추가</td>
+                          <td class="col-4depth">추가</td>
                           <td class="col-5depth"></td>
                           <td class="col-type" data-type="모달팝업"></td>
                           <td class="col-url">html/camera_add.html</td>
@@ -1173,7 +1173,7 @@
                           <td class="col-1depth"></td>
                           <td class="col-2depth"></td>
                           <td class="col-3depth"></td>
-                          <td class="col-4depth">카메라 수정</td>
+                          <td class="col-4depth">수정</td>
                           <td class="col-5depth"></td>
                           <td class="col-type" data-type="모달팝업"></td>
                           <td class="col-url">html/camera_edit.html</td>
@@ -1186,15 +1186,19 @@
                           <td class="col-num"><!--자동입력--></td>
                           <td class="col-1depth"></td>
                           <td class="col-2depth"></td>
-                          <td class="col-3depth">카메라 관리(맵 설정)</td>
+                          <td class="col-3depth">맵 설정</td>
                           <td class="col-4depth"></td>
                           <td class="col-5depth"></td>
                           <td class="col-type" data-type=""></td>
-                          <td class="col-url">html/camera_map_setting.html</td>
+                          <td class="col-url">html/map_setting.html</td>
                           <!-- <td class="col-date"></td> -->
                           <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
-                          <td class="col-memo"></td>
+                          <td class="col-memo">
+                            <ul style="font-weight: bold">
+                              <li>- 카메라 관리, 레이더 관리, 신호 정보 관리, LOS 관리</li>
+                            </ul>
+                          </td>
                         </tr>
                         <tr>
                           <td class="col-num"><!--자동입력--></td>
@@ -1242,8 +1246,64 @@
                           <td class="col-num"><!--자동입력--></td>
                           <td class="col-1depth"></td>
                           <td class="col-2depth"></td>
+                          <td class="col-3depth">레이더 관리</td>
+                          <td class="col-4depth">목록</td>
+                          <td class="col-5depth"></td>
+                          <td class="col-type" data-type=""></td>
+                          <td class="col-url">html/radar_list.html</td>
+                          <!-- <td class="col-date"></td> -->
+                          <td class="col-complete" data-complete="완료"></td>
+                          <!-- <td class="col-worker"></td> -->
+                          <td class="col-memo"></td>
+                        </tr>
+                        <tr>
+                          <td class="col-num"><!--자동입력--></td>
+                          <td class="col-1depth"></td>
+                          <td class="col-2depth"></td>
+                          <td class="col-3depth"></td>
+                          <td class="col-4depth">상세</td>
+                          <td class="col-5depth"></td>
+                          <td class="col-type" data-type="모달팝업"></td>
+                          <td class="col-url">html/radar_view.html</td>
+                          <!-- <td class="col-date"></td> -->
+                          <td class="col-complete" data-complete="완료"></td>
+                          <!-- <td class="col-worker"></td> -->
+                          <td class="col-memo"></td>
+                        </tr>
+                        <tr>
+                          <td class="col-num"><!--자동입력--></td>
+                          <td class="col-1depth"></td>
+                          <td class="col-2depth"></td>
+                          <td class="col-3depth"></td>
+                          <td class="col-4depth">추가</td>
+                          <td class="col-5depth"></td>
+                          <td class="col-type" data-type="모달팝업"></td>
+                          <td class="col-url">html/radar_add.html</td>
+                          <!-- <td class="col-date"></td> -->
+                          <td class="col-complete" data-complete="완료"></td>
+                          <!-- <td class="col-worker"></td> -->
+                          <td class="col-memo"></td>
+                        </tr>
+                        <tr>
+                          <td class="col-num"><!--자동입력--></td>
+                          <td class="col-1depth"></td>
+                          <td class="col-2depth"></td>
+                          <td class="col-3depth"></td>
+                          <td class="col-4depth">수정</td>
+                          <td class="col-5depth"></td>
+                          <td class="col-type" data-type="모달팝업"></td>
+                          <td class="col-url">html/radar_edit.html</td>
+                          <!-- <td class="col-date"></td> -->
+                          <td class="col-complete" data-complete="완료"></td>
+                          <!-- <td class="col-worker"></td> -->
+                          <td class="col-memo"></td>
+                        </tr>
+                        <tr>
+                          <td class="col-num"><!--자동입력--></td>
+                          <td class="col-1depth"></td>
+                          <td class="col-2depth"></td>
                           <td class="col-3depth">연동제어 관리</td>
-                          <td class="col-4depth">연동제어 관리 목록</td>
+                          <td class="col-4depth">목록</td>
                           <td class="col-5depth"></td>
                           <td class="col-type" data-type=""></td>
                           <td class="col-url">html/linkage_list.html</td>
@@ -1257,7 +1317,7 @@
                           <td class="col-1depth"></td>
                           <td class="col-2depth"></td>
                           <td class="col-3depth"></td>
-                          <td class="col-4depth">연동제어 관리 상세</td>
+                          <td class="col-4depth">상세</td>
                           <td class="col-5depth"></td>
                           <td class="col-type" data-type="모달팝업"></td>
                           <td class="col-url">html/linkage_view.html</td>
@@ -1271,7 +1331,7 @@
                           <td class="col-1depth"></td>
                           <td class="col-2depth"></td>
                           <td class="col-3depth"></td>
-                          <td class="col-4depth">연동제어 관리 추가</td>
+                          <td class="col-4depth">추가</td>
                           <td class="col-5depth"></td>
                           <td class="col-type" data-type="모달팝업"></td>
                           <td class="col-url">html/linkage_add.html</td>
@@ -1285,7 +1345,7 @@
                           <td class="col-1depth"></td>
                           <td class="col-2depth"></td>
                           <td class="col-3depth"></td>
-                          <td class="col-4depth">연동제어 관리 수정</td>
+                          <td class="col-4depth">수정</td>
                           <td class="col-5depth"></td>
                           <td class="col-type" data-type="모달팝업"></td>
                           <td class="col-url">html/linkage_edit.html</td>
@@ -1299,7 +1359,7 @@
                           <td class="col-1depth"></td>
                           <td class="col-2depth"></td>
                           <td class="col-3depth">sw 연동 관리</td>
-                          <td class="col-4depth">sw 연동 관리 목록</td>
+                          <td class="col-4depth">목록</td>
                           <td class="col-5depth"></td>
                           <td class="col-type" data-type=""></td>
                           <td class="col-url">html/sw_list.html</td>
@@ -1313,7 +1373,7 @@
                           <td class="col-1depth"></td>
                           <td class="col-2depth"></td>
                           <td class="col-3depth"></td>
-                          <td class="col-4depth">sw 연동 관리 상세</td>
+                          <td class="col-4depth">상세</td>
                           <td class="col-5depth"></td>
                           <td class="col-type" data-type="모달팝업"></td>
                           <td class="col-url">html/sw_view.html</td>
@@ -1327,7 +1387,7 @@
                           <td class="col-1depth"></td>
                           <td class="col-2depth"></td>
                           <td class="col-3depth"></td>
-                          <td class="col-4depth">sw 연동 관리 추가</td>
+                          <td class="col-4depth">추가</td>
                           <td class="col-5depth"></td>
                           <td class="col-type" data-type="모달팝업"></td>
                           <td class="col-url">html/sw_add.html</td>
@@ -1341,7 +1401,7 @@
                           <td class="col-1depth"></td>
                           <td class="col-2depth"></td>
                           <td class="col-3depth"></td>
-                          <td class="col-4depth">sw 연동 관리 수정</td>
+                          <td class="col-4depth">수정</td>
                           <td class="col-5depth"></td>
                           <td class="col-type" data-type="모달팝업"></td>
                           <td class="col-url">html/sw_edit.html</td>
@@ -1457,6 +1517,48 @@
                           <td class="col-5depth"></td>
                           <td class="col-type" data-type="모달팝업"></td>
                           <td class="col-url">html/signal_info_edit2.html</td>
+                          <!-- <td class="col-date"></td> -->
+                          <td class="col-complete" data-complete="완료"></td>
+                          <!-- <td class="col-worker"></td> -->
+                          <td class="col-memo"></td>
+                        </tr>
+                        <tr>
+                          <td class="col-num"><!--자동입력--></td>
+                          <td class="col-1depth"></td>
+                          <td class="col-2depth"></td>
+                          <td class="col-3depth">LOS 정보 설정</td>
+                          <td class="col-4depth">상세</td>
+                          <td class="col-5depth"></td>
+                          <td class="col-type" data-type="모달팝업"></td>
+                          <td class="col-url">html/los_view.html</td>
+                          <!-- <td class="col-date"></td> -->
+                          <td class="col-complete" data-complete="완료"></td>
+                          <!-- <td class="col-worker"></td> -->
+                          <td class="col-memo"></td>
+                        </tr>
+                        <tr>
+                          <td class="col-num"><!--자동입력--></td>
+                          <td class="col-1depth"></td>
+                          <td class="col-2depth"></td>
+                          <td class="col-3depth"></td>
+                          <td class="col-4depth">추가</td>
+                          <td class="col-5depth"></td>
+                          <td class="col-type" data-type="모달팝업"></td>
+                          <td class="col-url">html/los_add.html</td>
+                          <!-- <td class="col-date"></td> -->
+                          <td class="col-complete" data-complete="완료"></td>
+                          <!-- <td class="col-worker"></td> -->
+                          <td class="col-memo"></td>
+                        </tr>
+                        <tr>
+                          <td class="col-num"><!--자동입력--></td>
+                          <td class="col-1depth"></td>
+                          <td class="col-2depth"></td>
+                          <td class="col-3depth"></td>
+                          <td class="col-4depth">수정</td>
+                          <td class="col-5depth"></td>
+                          <td class="col-type" data-type="모달팝업"></td>
+                          <td class="col-url">html/los_edit.html</td>
                           <!-- <td class="col-date"></td> -->
                           <td class="col-complete" data-complete="완료"></td>
                           <!-- <td class="col-worker"></td> -->
