--- a/base/html/sw_list.html
+++ b/base/html/sw_list.html
@@ -20,7 +20,7 @@
 
       <main class="ly-container">
         <div class="ly-sub">
-          <div class="ly-setting">
+          <div class="ly-setting type2">
             <div class="ui breadcrumb">
               <i class="home icon"></i>
               <i class="right angle icon divider"></i>
@@ -48,7 +48,8 @@
             <!-- //button-function-group -->
 
             <div class="data-tbl-very">
-              <table class="ui very basic table">
+              <!-- 230928 : is-fncbtn 클래스 추가 -->
+              <table class="ui very basic table is-fncbtn">
                 <colgroup>
                   <col style="width: 72px" />
                   <col style="width: 56px" />
