--- a/base/html/camera_map_view.html
+++ b/base/html/camera_map_view.html
@@ -24,7 +24,7 @@
       <nav class="gnb" include-html="/base/html/common/gnb.html"></nav>
 
       <main class="ly-container">
-        <div id="map1" class="ly-map camera-map">
+        <div id="map1" class="ly-map map-setting">
           <!-- 화면 위치 -->
           <div class="ui breadcrumb">
             <i class="home icon"></i>
