--- a/base/html/radar_list.html
+++ b/base/html/radar_list.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>영상인식 ROI 설정 목록</title>
+    <title>레이더 관리</title>
     <script src="/base/js/lib/jquery-3.5.1.min.js"></script>
     <script src="/base/js/lib/jquery-ui.min.js"></script>
     <script src="/base/js/lib/semantic.min.js"></script>
@@ -20,15 +20,15 @@
 
       <main class="ly-container">
         <div class="ly-sub">
-          <div class="ly-setting type2">
+          <div class="ly-setting">
             <div class="ui breadcrumb">
               <i class="home icon"></i>
               <i class="right angle icon divider"></i>
               <span class="section">교차로</span>
               <i class="right angle icon divider"></i>
-              <span class="section">시스템 설정</span>
+              <div class="section">시스템 관리</div>
               <i class="right angle icon divider"></i>
-              <div class="active section">영상인식 ROI 설정</div>
+              <div class="active section">레이더 관리</div>
             </div>
             <!-- //breadcrumb -->
 
@@ -55,19 +55,29 @@
                 <button type="button" class="btn-data-search">검색</button>
               </div>
               <!-- //inner -->
-              <button class="ui primary basic button rounded">Excel Down</button>
             </section>
             <!-- //filter-grouop -->
 
+            <section class="button-function-group">
+              <div class="left">
+                <div class="ui basic buttons">
+                  <button class="ui secondary basic button rounded">추가</button>
+                  <button class="ui secondary basic button rounded">삭제</button>
+                </div>
+                <!-- //buttons -->
+              </div>
+              <!-- //left -->
+              <div class="right">
+                <button class="ui primary basic button rounded">Excel Down</button>
+              </div>
+            </section>
+            <!-- //button-function-group -->
+
             <div class="data-tbl-very">
-              <table class="ui very basic table is-fncbtn">
+              <table class="ui very basic table">
                 <colgroup>
+                  <col style="width: 72px" />
                   <col style="width: 56px" />
-                  <col />
-                  <col />
-                  <col />
-                  <col />
-                  <col />
                   <col />
                   <col />
                   <col />
@@ -77,52 +87,51 @@
                 </colgroup>
                 <thead>
                   <tr>
+                    <th>
+                      <div class="ui checkbox primary-chkbox txt-none c-navy">
+                        <input type="checkbox" />
+                        <label></label>
+                      </div>
+                    </th>
                     <th>No</th>
                     <th>구역</th>
-                    <th>지점 ID</th>
                     <th>지점</th>
-                    <th>카메라 명</th>
-                    <th>채널</th>
-                    <th>촬영 방향</th>
-                    <th>객체 ROI</th>
-                    <th>돌발 ROI</th>
-                    <th>교차로 ROI</th>
-                    <th>속도 ROI</th>
-                    <th>ROI 설정</th>
+                    <th>레이더 ID</th>
+                    <th>레이더 명</th>
+                    <th>검지 방향</th>
+                    <th>ID Address</th>
                   </tr>
                 </thead>
                 <tbody>
                   <tr>
+                    <td>
+                      <div class="ui checkbox primary-chkbox txt-none c-bluesky">
+                        <input type="checkbox" />
+                        <label></label>
+                      </div>
+                    </td>
                     <td>1</td>
                     <td>태릉</td>
-                    <td>1001</td>
                     <td>태릉입구역</td>
-                    <td>CAM1</td>
-                    <td>1</td>
+                    <td>CAM0000001</td>
+                    <td>태릉입구역 방면</td>
                     <td>북</td>
-                    <td>설정</td>
-                    <td>설정</td>
-                    <td>미설정</td>
-                    <td>미설정</td>
-                    <td>
-                      <a href="#" class="ui secondary basic button c-gray-type2 rounded">이동</a>
-                    </td>
+                    <td>192.168.172.130</td>
                   </tr>
                   <tr>
+                    <td>
+                      <div class="ui checkbox primary-chkbox txt-none c-bluesky">
+                        <input type="checkbox" />
+                        <label></label>
+                      </div>
+                    </td>
                     <td>1</td>
                     <td>태릉</td>
-                    <td>1001</td>
                     <td>태릉입구역</td>
-                    <td>CAM1</td>
-                    <td>1</td>
+                    <td>CAM0000001</td>
+                    <td>태릉입구역 방면</td>
                     <td>북</td>
-                    <td>설정</td>
-                    <td>설정</td>
-                    <td>미설정</td>
-                    <td>미설정</td>
-                    <td>
-                      <a href="#" class="ui secondary basic button c-gray-type2 rounded">이동</a>
-                    </td>
+                    <td>192.168.172.130</td>
                   </tr>
                 </tbody>
               </table>
